components/datapower/base/dp-webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-webui
spec:
  selector:
    app.kubernetes.io/name: quickstart

  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
