components/datapower/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: datapower-gui
  namespace: cp4i
spec:
  host: datapower-gui-cp4i.apps.t9xdnubu.eastus.aroapp.io
  to:
    kind: Service
    name: dp-webui
    weight: 100
  port:
    targetPort: 9090
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
  #alternateBackends: []
status:
  ingress:
    - host: datapower-gui-cp4i.apps.t9xdnubu.eastus.aroapp.io
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.t9xdnubu.eastus.aroapp.io
